# auditalogs

./: .gitignore  Cargo.toml  Dockerfile  README.md  architecture.excalidraw  blockchain.txt  rustfmt.toml
.github/workflows/: auto-tag.yml  release.yml
api/document/: folder.bru  store.bru
api/elastic/: folder.bru  search.bru
api/storage/: folder.bru  hash.bru  search.bru
audita-contract/: docker-compose.yml  hardhat.config.ts
audita-contract/contracts/: Auditability.sol
audita-elk/: docker-compose.yml
audita-redis/: Cargo.toml  docker-compose.yml
audita-redis/src/: main.rs
audita-server/: Cargo.toml
audita-server/src/: main.rs
audita-tests/: .gitignore  audita.toml  docker-compose.yml  k6.js  latencia.ipynb  notebook.ipynb  stress.js  tests.ipynb  tests.sh
audita-tests/prometheus/: prometheus.yml
audita-ui/: package.json  pnpm-lock.yaml
audita-ui/app/: layout.tsx  page.tsx
audita-ui/components/: connect-wallet.tsx  contract-manager.tsx  document-list.tsx  factory-manager.tsx  search-interface.tsx  wagmi-provider.tsx
audita-ui/lib/: Auditability.json  AuditabilityFactory.json  (+2 more)
audita-worker/: Cargo.toml  Config.toml  audita.toml  config.toml  latencia.csv
audita-worker/src/: channel.rs  cli.rs  config.rs  elastic_client.rs  eth_client.rs  main.rs  prometheus.rs  tx_manager.rs  utils.rs
audita-worker/src/client/: elastic.rs  ethereum.rs  mod.rs
audita-worker/src/route/: logs.rs
audita-worker/src/task/: elastic.rs  ethereum.rs  worker.rs
config/: dev.toml
deploy/: app.yml  besu.yml  deploy.sh  elastic.yml  monitoring.yml  undeploy.sh
hardhat/: docker-compose.yml
server/: Cargo.toml  Config.toml  Dockerfile  entrypoint.sh
src/: batch.rs  channel.rs  config.rs  elastic.rs  error.rs  ethereum.rs  hashing.rs  main.rs  rabbitmq.rs  setup.rs  state.rs
tests/: k6.js  update.sh
ui/: .env.example  Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
(+99 files in other folders)
