[package]
name = "audita"
version = "0.1.7"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
alloy = { version = "0.12.2", features = ["full"] }
elasticsearch = "8.16.0-alpha.1"
sha2 = "0.10.8"
rand = "0.8.5"
chrono = "0.4"
axum = "0.8.3"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["derive"] }
prometheus = "0.14.0"
tower-http = { version = "0.6.2", features = ["cors"] }
rust-embed = "8.7.2"
mime_guess = "2.0.5"
