[package]
name = "audita-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
redis = "0.29.0"
sha2 = "0.10.8"
tokio = { version = "1", features = ["full"] }
serde = "1.0.215"
serde_json = "1.0.133"
elasticsearch = "8.16.0-alpha.1"
alloy = { version = "0.6.4", features = ["full"] }
futures = "0.3.31"
rand = "0.8.5"
chrono = "0.4"
