[package]
name = "audita-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
alloy = { version = "0.6.4", features = ["full"] }
elasticsearch = "8.16.0-alpha.1"
sha2 = "0.10.8"
rand = "0.8.5"
chrono = "0.4"
