[package]
name = "audita-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
alloy = { version = "0.12.2", features = ["full"] }
elasticsearch = "8.16.0-alpha.1"
sha2 = "0.10.8"
rand = "0.8.5"
chrono = "0.4"
thiserror = "2.0.12"
clap = { version = "4.5.31", features = ["derive"] }
toml = "0.8.20"
